welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  for (r <- 0 to (len(nums)-1 ) ) {
                  ^indexOfValue:6: error: not found: value retrun
      retrun -1
      ^